# superbuild

./: GlobalSuperBuildOptions.cmake  README  SuperBuild.cmake  build-kdesc.sh
Everything/: CMakeLists.txt  README.txt  kde_projects.xml.giturls  sb.rb
extragear/: CMakeLists.txt
kdeaccessibility/: CMakeLists.txt
kdebase/: CMakeLists.txt
kdebindings/: CMakeLists.txt
kdeedu/: CMakeLists.txt
kdegames/: CMakeLists.txt
kdegraphics/: CMakeLists.txt
kdelibs/: CMakeLists.txt
kdepim/: CMakeLists.txt
kdepim-runtime/: CMakeLists.txt
kdepimlibs/: CMakeLists.txt
kdeplasma-addons/: CMakeLists.txt
kdesupport/: CMakeLists.txt
kdeutils/: CMakeLists.txt
office/: CMakeLists.txt
